# Trading-Platform-comment-analysis

./: .gitignore  pyproject.toml  reviews.txt  roberta.py  test.py
scrapers/playStore/: test.py
scrapers/reddit/: scraper.py
